--- a/.cproject
+++ b/.cproject
@@ -64,6 +64,7 @@
 									<listOptionValue builtIn="false" value="../App/Modules/modbus/rtu"/>
 									<listOptionValue builtIn="false" value="../App/Modules/modbus/port"/>
 									<listOptionValue builtIn="false" value="../App/Middlewares/fatfs/source"/>
+									<listOptionValue builtIn="false" value="../App/Modules/modbus-master"/>
 								</option>
 								<inputType id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.input.c.29736296" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.input.c"/>
 							</tool>
